<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1D1D1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_avatar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/neighbour_photo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/detail_image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-70dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:text="Name" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/detail_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:baselineAligned="false"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="#EFEFF1"
                app:srcCompat="@drawable/ic_star_border_white_24dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/detail_info_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/detail_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/detail_info_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="55dp"
                    android:drawableStart="@drawable/ic_location_on_withe_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    tools:text="Address" />

                <TextView
                    android:id="@+id/detail_info_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="90dp"
                    android:drawableStart="@drawable/ic_phone_withe_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    tools:text="Phone" />

                <TextView
                    android:id="@+id/detail_info_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_language_withe_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    tools:text="Media" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/detail_about_neighbour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:contentPaddingRight="30sp">

                <TextView
                    android:id="@+id/detail_about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="About me" />

                <TextView
                    android:id="@+id/detail_about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginBottom="10dp"
                    tools:text="About me text" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/detail_previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_withe_30dp" />

</android.support.constraint.ConstraintLayout>